--- a/mypy.ini
+++ b/mypy.ini
@@ -6,6 +6,7 @@
 python_version = 3.9
 show_error_codes = true
 follow_imports = silent
+show_traceback = true
 ignore_missing_imports = true
 strict_equality = true
 no_implicit_optional = true
