Add error-code truthy-iterable (13762)

--- a/mypy.ini
+++ b/mypy.ini
@@ -14,7 +14,7 @@ warn_incomplete_stub = true
 warn_redundant_casts = true
 warn_unused_configs = true
 warn_unused_ignores = true
-enable_error_code = ignore-without-code
+enable_error_code = ignore-without-code, truthy-iterable
 disable_error_code = annotation-unchecked
 strict_concatenate = false
 check_untyped_defs = true
