Always create pip venv

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -516,7 +516,7 @@ jobs:
             ${{ runner.os }}-${{ steps.python.outputs.python-version }}-${{
             needs.info.outputs.python_cache_key }}
       - name: Restore pip wheel cache
-        if: steps.cache-venv.outputs.cache-hit != 'true'
+        # if: steps.cache-venv.outputs.cache-hit != 'true'
         uses: actions/cache@v3.0.11
         with:
           path: ${{ env.PIP_CACHE }}
