--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -875,6 +875,10 @@ jobs:
         run: |
           . venv/bin/activate
           python3 -m script.translations develop --all
+      - name: Custom rokuecp version
+        run: |
+          . venv/bin/activate
+          pip install git+https://github.com/cdce8p/python-rokuecp
       - name: Run pytest (fully)
         if: needs.info.outputs.test_full_suite == 'true'
         timeout-minutes: 60
